feat!: split the engine into unruly-engine-core and the MVEL unruly-engine, as named modules
The build is now three projects. core publishes the new unruly-engine-core
artifact: the API, the language SPI and the engine, without MVEL. mvel
publishes unruly-engine, which keeps its coordinates and module name, holds the
MVEL language, and depends on unruly-engine-core, so existing dependencies
still bring the whole engine. module-path-test runs two applications on the
module path, one with MVEL and one without, as part of check.

Both jars are named modules. io.github.brantunger.unruly.core exports only the
API packages, requires SLF4J itself and uses ExpressionLanguage.
io.github.brantunger.unruly requires the core module transitively and mvel2,
and provides the MVEL language. Module-path applications no longer need
requires org.slf4j, and an application without MVEL can use jlink.

The coverage gate covers both artifacts together, and each artifact has its own
API check. Until its first release, unruly-engine-core is compared with the
1.8.0 unruly-engine jar without its mvel package. One Javadoc site documents
both modules. Checkstyle moves to 14.1.0, which parses module-info.java;
13.7.0 and 10.20.1 can't. The tests stay together in mvel, because most run
MVEL rules.

Fixes #278
Fixes #215
Fixes #209
Fixes #233

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017wZY5LykdQatufPV8K9aKF